# fastapiexample

./: CHANGELOG  Dockerfile  MANIFEST.in  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yaml
src/fastapiexample/: __init__.py  config.py  crud.py  database.py  main.py  middleware.py  models.py  schemas.py
src/fastapiexample/routers/: items.py  users.py
tests/: conftest.py  test_fastapiexample.py
