[metadata]
name = fastapiexample
version = 0.0.2.1
description = Example project to test FastApi
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
author = Yuriy Zemskov
author_email = zemskyura@gmail.com
license = MIT
license_files = LICENSE
platforms = unix, linux, osx
keywords = default project template
url = https://github.com/kilgoretrout1985/fastapiexample
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages =
    fastapiexample
    # or `find:`
install_requires =
    fastapi==0.79.0
    uvicorn==0.18.2
    sqlalchemy[asyncio]==1.4.40
    asyncpg==0.26.0
    typer==0.6.1
python_requires = >=3.7
package_dir =
    =src
#zip_safe = no
include_package_data = True

[options.extras_require]
testing =
    flake8
    tox
    mypy
    pytest
    pytest-cov
    pytest-asyncio
    httpx

[options.package_data]
fastapiexample = py.typed

[flake8]
max-line-length = 120